@@ -3,11 +3,12 @@ serd (0.30.17) unstable; urgency=medium
   * Add Windows path separator support to serd_node_new_file_uri()
   * Fix crash when trying to read chunks without starting
   * Fix hang when skipping an error at EOF when lax parsing
+  * Gracefully handle bad characters in Turtle blank node syntax
   * Gracefully handle bad characters in Turtle datatype syntax
   * Override pkg-config dependency within meson
   * Test header for warnings more strictly
 
- -- David Robillard <d@drobilla.net>  Thu, 24 Nov 2022 20:51:55 +0000
+ -- David Robillard <d@drobilla.net>  Thu, 24 Nov 2022 21:05:52 +0000
 
 serd (0.30.16) stable; urgency=medium
 
